<resources>
    <string name="app_name">TestMySkills</string>
    <string name="A">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="your_name">Your name</string>
    <string name="font">sans-serif-condensed-light</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_choose_level_of_difficulty">Level of difficulty</string>
    <string name="timer">Timer enabled</string>
    <string name="choose_amount_of_questions">Number of questions</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="start">Start</string>
    <string name="end_game">End game</string>
    <string name="total_score">Total score: </string>
    <string name="restart">Restart</string>
    <string name="exit">exit</string>
    <string name="friend_answer_1">Hmm... Good question... I think the answer is </string>
    <string name="friend_answer_2">Who is it? Where did you get my number? Do not call here again!! </string>
    <string name="friend_answer_3">No. I am sorry. I do not understand biology ...</string>
    <string name="friend_answer_5">Hmm... Good question... I think the answer is </string>
    <string name="friend_answer_6">Hmm... Good question... I think the answer is </string>
    <string name="used">Used!</string>
    <string name="seconds">s</string>
    <string name="time_for_question_in_seconds">Time for question in seconds</string>
    <string name="time_is_out">Time is out. Next question</string>
    <string name="points">Points:</string>
    <string name="hints">Used hints:</string>

</resources>