<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:textSize="30sp"
            tools:text="100" />

        <TextView
            android:id="@+id/question_counter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="/"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="10"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="59s"
            android:layout_weight="1.5"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:textSize="30sp"
             />



    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:background="@color/teal_200"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/sheet_for_ques"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:background="@color/teal_700"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/text_question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="9dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sheet_for_ques"
        app:layout_constraintEnd_toEndOf="@+id/sheet_for_ques"
        app:layout_constraintStart_toStartOf="@+id/sheet_for_ques"
        app:layout_constraintTop_toTopOf="@+id/sheet_for_ques"
        tools:text="Здесь мог бы быть ваш вопрос." />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/answers"
        app:layout_constraintTop_toBottomOf="@+id/sheet_for_ques"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout

            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="9dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/answers"
            app:layout_constraintTop_toBottomOf="@+id/sheet_for_ques">


            <Button
                android:id="@+id/button_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/A"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/b"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/c"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/d"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/teal_700"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <LinearLayout
        android:id="@+id/answers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/fifty_fifty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="50/50"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/call_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="friend"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="help"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>